测试用keras拟合, 效果很渣啊

--- a/lesson_06_ML.ipynb
+++ b/lesson_06_ML.ipynb
@@ -32,10 +32,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.453Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "pathname='data'\n",
+    "fname='sampleIOLdataset.xlsx'\n",
+    "filename=os.path.join(pathname,fname)\n",
+    "IOLdata=testdata=pd.read_excel(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.456Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(IOLdata[0:5])\n",
+    "print(IOLdata.A[0:3])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 数据清洗"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.459Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "nanlist=np.isnan(IOLdata.PostOPREF)\n",
+    "print(IOLdata[nanlist][0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.462Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "IOLdata.PostOPREF[nanlist]=IOLdata.REF[nanlist]\n",
+    "# IOLdata=IOLdata.replace(np.nan,0)\n",
+    "print(IOLdata[nanlist][0:4])\n",
+    "y_data=np.asarray(IOLdata.PostOPREF).T.reshape(-1,1)\n",
+    "x_data=np.asarray(IOLdata)[:,0:6]\n",
+    "\n",
+    "print(y_data.shape)\n",
+    "print(x_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.468Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "y_mean=np.mean(y_data)\n",
+    "y_std=np.std(y_data)\n",
+    "new_y_data=(y_data-y_mean)/y_std\n",
+    "y_train=new_y_data[:1700]\n",
+    "y_test=new_y_data[1700:]\n",
+    "\n",
+    "\n",
+    "x_mean=np.mean(x_data,axis=0,keepdims=True)\n",
+    "x_std=np.std(x_data,axis=0,keepdims=True)\n",
+    "\n",
+    "new_x_data=(x_data-x_mean)/x_std\n",
+    "\n",
+    "x_train=new_x_data[:1700]\n",
+    "x_test=new_x_data[1700:]\n"
    ]
   },
   {
@@ -56,7 +152,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://keras-cn.readthedocs.io/en/latest/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 建立深度神经网络"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.473Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation\n",
+    "from keras import initializers,optimizers\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(units=64,\n",
+    "                input_dim=6,\n",
+    "                activation=\"relu\",\n",
+    "                kernel_initializer=initializers.glorot_normal(seed=0) ))\n",
+    "model.add(Dense(units=64,\n",
+    "                activation=\"relu\",\n",
+    "                kernel_initializer=initializers.glorot_normal()))\n",
+    "model.add(Dense(units=64,\n",
+    "                activation=\"relu\",\n",
+    "                kernel_initializer=initializers.glorot_normal()))\n",
+    "model.add(Dense(units=64,\n",
+    "                activation=\"relu\",\n",
+    "                kernel_initializer=initializers.glorot_normal()))\n",
+    "model.add(Dense(units=64,\n",
+    "                activation=\"relu\",\n",
+    "                kernel_initializer=initializers.glorot_normal()))\n",
+    "model.add(Dense(units=1,\n",
+    "                activation=\"tanh\",\n",
+    "                kernel_initializer=initializers.glorot_normal()))\n",
+    "\n",
+    "from keras.optimizers import SGD\n",
+    "model.compile(loss='mean_squared_error', \n",
+    "              optimizer='rmsprop',\n",
+    "              #optimizer=optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08),\n",
+    "              metrics=['accuracy'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-10-21T16:10:13.477Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "model.fit(x_train, y_train, epochs=200, batch_size=50)"
    ]
   },
   {
