--- a/prepairMLdata.ipynb
+++ b/prepairMLdata.ipynb
@@ -65,17 +65,17 @@
     "    REF=np.asarray(preOPdata['REF']) \n",
     "    \n",
     "    P=SRK_2(A,K1,K2,L,REF)\n",
-    "    P=np.around(P*4)/4\n",
+    "#     P=np.around(P*4)/4\n",
     "    Pr=SRK_T(A,K1,K2,L,REF)         \n",
     "    \n",
-    "    noise=np.random.randn(population,1)*1\n",
-    "    ratio=np.random.rand(population,1)*0.1+0.8\n",
+    "    noise=np.random.randn(population,1)*0.0\n",
+    "    ratio=np.random.rand(population,1)*0.0+0.8\n",
     "    R=ratio*(P-Pr)+noise\n",
-    "    R=np.around(R*4)/4\n",
-    "    satisfied=np.logical_and(R<0,R>-0.75)\n",
-    "    loss_to_follow=np.random.rand(population,1)<0.1\n",
-    "    R[satisfied]=0\n",
-    "    R[loss_to_follow]=np.nan\n",
+    "#     R=np.around(R*4)/4\n",
+    "#     satisfied=np.logical_and(R<0,R>-0.50)\n",
+    "#     loss_to_follow=np.random.rand(population,1)<0.05\n",
+    "#     R[satisfied]=0\n",
+    "#     R[loss_to_follow]=np.nan\n",
     "    data=np.asarray([preOPdata['A'],\n",
     "            preOPdata['K1'],\n",
     "            preOPdata['K2'],\n",
