--- a/lesson_x_ML.ipynb
+++ b/lesson_x_ML.ipynb
@@ -33,10 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.453Z"
+     "end_time": "2017-10-26T01:55:56.290390Z",
+     "start_time": "2017-10-26T01:55:50.167003Z"
     },
     "collapsed": true
    },
@@ -52,13 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.456Z"
+     "end_time": "2017-10-26T01:55:56.358660Z",
+     "start_time": "2017-10-26T01:55:56.293217Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       A         K1         K2          L   REF   IOLPower  PostOPREF\n",
+      "0  118.8  41.351356  42.312151  24.171811 -0.50  21.346894  -0.250431\n",
+      "1  118.4  43.621478  43.501080  24.586358 -3.25  21.291454  -1.088519\n",
+      "2  118.4  42.109335  38.567343  24.283508 -3.25  25.449224  -0.981862\n",
+      "3  118.8  37.217467  41.210893  23.503847 -3.25  28.810120  -1.493851\n",
+      "4  119.0  42.110941  38.590989  23.361435 -3.25  28.343045  -1.620569\n",
+      "0    118.8\n",
+      "1    118.4\n",
+      "2    118.4\n",
+      "Name: A, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "print(IOLdata[0:5])\n",
     "print(IOLdata.A[0:3])\n"
@@ -73,13 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.459Z"
+     "end_time": "2017-10-26T01:55:56.401285Z",
+     "start_time": "2017-10-26T01:55:56.375083Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [A, K1, K2, L, REF, IOLPower, PostOPREF]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "nanlist=np.isnan(IOLdata.PostOPREF)\n",
@@ -88,14 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.462Z"
+     "end_time": "2017-10-26T01:55:56.449348Z",
+     "start_time": "2017-10-26T01:55:56.408522Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [A, K1, K2, L, REF, IOLPower, PostOPREF]\n",
+      "Index: []\n",
+      "(20000, 1)\n",
+      "(20000, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "IOLdata.PostOPREF[nanlist]=IOLdata.REF[nanlist]\n",
     "# IOLdata=IOLdata.replace(np.nan,0)\n",
@@ -109,10 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.468Z"
+     "end_time": "2017-10-26T01:55:56.493848Z",
+     "start_time": "2017-10-26T01:55:56.455303Z"
     },
     "scrolled": true
    },
@@ -121,8 +165,10 @@
     "y_mean=np.mean(y_data)\n",
     "y_std=np.std(y_data)\n",
     "new_y_data=(y_data-y_mean)/y_std\n",
-    "y_train=new_y_data[:1700]\n",
-    "y_test=new_y_data[1700:]\n",
+    "splitNum=int(new_y_data.shape[0]*0.8)\n",
+    "\n",
+    "y_train=new_y_data[0:splitNum]\n",
+    "y_test=new_y_data[splitNum:]\n",
     "\n",
     "\n",
     "x_mean=np.mean(x_data,axis=0,keepdims=True)\n",
@@ -130,8 +176,8 @@
     "\n",
     "new_x_data=(x_data-x_mean)/x_std\n",
     "\n",
-    "x_train=new_x_data[:1700]\n",
-    "x_test=new_x_data[1700:]\n"
+    "x_train=new_x_data[:splitNum]\n",
+    "x_test=new_x_data[splitNum:]\n"
    ]
   },
   {
@@ -164,10 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.473Z"
+     "end_time": "2017-10-26T01:55:56.948774Z",
+     "start_time": "2017-10-26T01:55:56.496607Z"
     }
    },
    "outputs": [],
@@ -178,20 +225,11 @@
     "from keras import initializers,optimizers\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(units=64,\n",
+    "model.add(Dense(units=18,\n",
     "                input_dim=6,\n",
     "                activation=\"relu\",\n",
     "                kernel_initializer=initializers.glorot_normal(seed=0) ))\n",
-    "model.add(Dense(units=64,\n",
-    "                activation=\"relu\",\n",
-    "                kernel_initializer=initializers.glorot_normal()))\n",
-    "model.add(Dense(units=64,\n",
-    "                activation=\"relu\",\n",
-    "                kernel_initializer=initializers.glorot_normal()))\n",
-    "model.add(Dense(units=64,\n",
-    "                activation=\"relu\",\n",
-    "                kernel_initializer=initializers.glorot_normal()))\n",
-    "model.add(Dense(units=64,\n",
+    "model.add(Dense(units=12,\n",
     "                activation=\"relu\",\n",
     "                kernel_initializer=initializers.glorot_normal()))\n",
     "model.add(Dense(units=1,\n",
@@ -202,22 +240,68 @@
     "model.compile(loss='mean_squared_error', \n",
     "              optimizer='rmsprop',\n",
     "              #optimizer=optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08),\n",
-    "              metrics=['accuracy'])\n",
+    "              #metrics=['loss']\n",
+    "             )\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-10-21T16:10:13.477Z"
+     "end_time": "2017-10-26T01:56:09.728692Z",
+     "start_time": "2017-10-26T01:55:56.956178Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "16000/16000 [==============================] - 1s - loss: 0.2715     \n",
+      "Epoch 2/10\n",
+      "16000/16000 [==============================] - 1s - loss: 0.1705     \n",
+      "Epoch 3/10\n",
+      "16000/16000 [==============================] - 0s - loss: 0.1633     \n",
+      "Epoch 4/10\n",
+      "16000/16000 [==============================] - 1s - loss: 0.1571     \n",
+      "Epoch 5/10\n",
+      "16000/16000 [==============================] - 1s - loss: 0.1507     \n",
+      "Epoch 6/10\n",
+      "16000/16000 [==============================] - 0s - loss: 0.1442     \n",
+      "Epoch 7/10\n",
+      "16000/16000 [==============================] - 0s - loss: 0.1396     \n",
+      "Epoch 8/10\n",
+      "16000/16000 [==============================] - 1s - loss: 0.1369     \n",
+      "Epoch 9/10\n",
+      "16000/16000 [==============================] - 0s - loss: 0.1352     \n",
+      "Epoch 10/10\n",
+      "16000/16000 [==============================] - 0s - loss: 0.1340     \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x121b2cf98>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.fit(x_train, y_train, epochs=200, batch_size=50)"
+    "model.fit(x_train, y_train)#, epochs=200, batch_size=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结果也太渣了"
    ]
   },
   {
