第6课统计分析

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,9 @@
     "* [第 4 课, 一千零一个病人](./lesson_04_1001patients.html)\n",
     "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n",
     "* [第 5 课, save 和 load](./lesson_05_pandas.html)\n",
-    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n"
+    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n",
+    "* [第 6 课, 统计分析](./lesson_06_pymc3-bayes.html)\n",
+    "  * [第 6 课, jupyter笔记本下载](./lesson_06_pymc3-bayes.ipynb)\n"
    ]
   },
   {
