--- a/lesson_06_pymc3-bayes.ipynb
+++ b/lesson_06_pymc3-bayes.ipynb
@@ -8,8 +8,9 @@
     }
    },
    "source": [
-    "我想医生们也还是需要大量进行\"传统\"的统计学分析的. 这几天正好看到了一个关于贝叶斯分析的PyMC包, 用来做概率计算. 下面的文章里讲解了临床最常见的一些统计应用, 比如参数估计, 组间比较. \n",
+    "我想医生们也还是需要大量进行\"传统\"的统计学分析的. 这几天正好看到了一个关于贝叶斯分析的PyMC包, 用来做概率计算. 下面的文章里讲解了临床最常见的一些统计应用, 比如参数估计, 组间比较. 看着写起来也不困难, 供参考. \n",
     "\n",
+    "----\n",
     "\n",
     "本文翻译自[Eric Ma](https://github.com/ericmjl)在PyCon2017上的演讲Bayesian Statistical Analysis with Python\n",
     "\n",
